--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 
     
 </body>
-<script src="./js/main.js" type="text/javascript">
+<script src="/index.js" type="text/javascript">
        
     </script>
 </html>
