--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.0/css/all.css"
         integrity="sha384-lKuwvrZot6UHsBSfcMvOkWwlCMgc0TaWr+30HWe3a4ltaBwTZhyTEggF5tJv8tbt" crossorigin="anonymous">
        
-        <title>YouTube</title>
-         <link rel="shortcut icon" href="/img/favicon.png" type="image/x-icon">
+        <title>MauTube</title>
+         <link rel="shortcut icon" href="/img/youtube-32-289233.png" type="image/png">
     <link rel="stylesheet" href="./css/style.css">
 </head>
 
