--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         integrity="sha384-lKuwvrZot6UHsBSfcMvOkWwlCMgc0TaWr+30HWe3a4ltaBwTZhyTEggF5tJv8tbt" crossorigin="anonymous">
        
         <title>MauTube</title>
-         <link rel="shortcut icon" href="/img/youtube-32-289233.png" type="image/png">
+         <link rel="shortcut icon" href="./img/youtube-32-289233.png" type="image/png">
     <link rel="stylesheet" href="./css/style.css">
 </head>
 
