--- a/index.html
+++ b/index.html
@@ -28,8 +28,36 @@
 
             <button onClick="color1()" id="red"><i class="fas fass fa-download"></i>
                 <button onClick="color2()"><i class="fas fass fa-th"></i></button>
-                <button><i class="fas fass fa-bell"></i></button>
-                <a href="#" class="avatar"><img src="img/mau.png" alt=""></a>
+                <button ><i class="fas fass fa-bell"></i></button>
+                <a href="#" class="avatar"><img id="user"  src="img/mau.png" alt=""></a>
+        </div>
+        <div class="pop_menu able" id="pop_menu">
+            <div class="user">
+               <div class="img2"> <img  src="/img/mau.png" alt=""></div>
+               <div class="info">
+                    <p class="name">Mauricio</p>
+                    <p class="email">j-ms-27@hotmail.com</p>
+                    <a href="#">Manage your account</a>
+               </div>
+            </div>
+            <hr>
+            <div class="option ">
+                <a href="#"><i class="fas fa-id-badge"></i>Your channel</a>
+                <a href="#"><i class="fas fa-file-invoice-dollar"></i>Paid membership</a>
+                <a href="#"><i class="fas fa-sliders-h"></i>MauTube Studio</a>
+                <a href="#"><i class="fas fa-random"></i>Swicth account</a>
+                <a href="#"><i class="fas fa-sign-out-alt"></i>Sign out</a>
+                <hr width="100%">
+                <a href="#" onClick="color2()"><i class="fas fa-adjust"></i>Dark mode</a>
+                <a href="#"><i class="fas fa-language"></i>Language</a>
+                <a href="#"><i class="fas fa-globe"></i>Location</a>
+                <a href="#"><i class="fas fa-user-cog"></i>Settings</a>
+                <a href="#"><i class="fas fa-server"></i>Your data in MauTube</a>
+                <a href="#"><i class="fas fa-question-circle"></i>Help</a>
+                <a href="#"><i class="fas fa-comment-dots"></i>Send feedback</a>
+                <a href="#"><i class="fas fa-keyboard"></i>Keyboar shortcuts</a>
+                
+            </div>
         </div>
     </nav>
 
