--- a/index.html
+++ b/index.html
@@ -29,11 +29,11 @@
             <button onClick="color1()" id="red"><i class="fas fass fa-download"></i>
                 <button onClick="color2()"><i class="fas fass fa-th"></i></button>
                 <button ><i class="fas fass fa-bell"></i></button>
-                <a href="#" class="avatar"><img id="user"  src="img/mau.png" alt=""></a>
+                <a href="#" class="avatar"><img id="user"  src="/img/mau.png" alt=""></a>
         </div>
         <div class="pop_menu able" id="pop_menu">
             <div class="user">
-               <div class="img2"> <img  src="img/mau.png" alt=""></div>
+               <div class="img2"> <img  src="/img/mau.png" alt=""></div>
                <div class="info">
                     <p class="name">Mauricio</p>
                     <p class="email">j-ms-27@hotmail.com</p>
