--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         </div>
         <div class="pop_menu able" id="pop_menu">
             <div class="user">
-               <div class="img2"> <img  src="/img/mau.png" alt=""></div>
+               <div class="img2"> <img  src="img/mau.png" alt=""></div>
                <div class="info">
                     <p class="name">Mauricio</p>
                     <p class="email">j-ms-27@hotmail.com</p>
