--- a/index.html
+++ b/index.html
@@ -48,8 +48,17 @@
                 <a href="#"><i class="fas fa-random"></i>Swicth account</a>
                 <a href="#"><i class="fas fa-sign-out-alt"></i>Sign out</a>
                 <hr width="100%">
-                <a href="#"><i class="fas fa-adjust"></i>Dark mode <input type="radio" name="dark" id="1" onClick="color2()" >On<input type="radio" name="dark" id="2" checked onClick="color1()">Off</a>
-                <a href="#"><i class="fas fa-language"></i>Language</a>
+                <a href="#"><i class="fas fa-adjust"></i>Dark mode
+                    <input type="radio" name="dark" id="2" onClick="color2()">On
+                    <input type="radio" name="dark" id="1" checked onClick="color1()">Off
+                </a>
+                <a href="#"><i class="fas fa-language"></i>Language 
+                    <select name="language" id="">
+                        <option value="Spanish">Spanish</option>
+                        <option value="English" selected>English</option>
+                        <option value="German">German</option>
+                        <option value="French">French</option>
+                    </select> </a>
                 <a href="#"><i class="fas fa-globe"></i>Location</a>
                 <a href="#"><i class="fas fa-user-cog"></i>Settings</a>
                 <a href="#"><i class="fas fa-server"></i>Your data in MauTube</a>
