--- a/index.html
+++ b/index.html
@@ -48,16 +48,21 @@
                 <a href="#"><i class="fas fa-random"></i>Swicth account</a>
                 <a href="#"><i class="fas fa-sign-out-alt"></i>Sign out</a>
                 <hr width="100%">
-                <a href="#"><i class="fas fa-adjust"></i>Dark mode
+                <a href="#" class="dmode"><i class="fas fa-adjust"></i>Dark mode
 
-                    <label class="check">On
+                    <button class="switch" id="switch">
+                        <span><i class="fas fa-sun"></i></span>
+                        <span><i class="fas fa-moon"></i></span>
+                    </button>
+
+                    <!-- <label class="check">On
                         <input type="radio" checked="checked" name="radio" onClick="color1()">
                         <span class="checkmark"></span>
                     </label>
                     <label class="check">Off
                         <input type="radio" name="radio" onClick="color2()">
                         <span class="checkmark"></span>
-                    </label>
+                    </label> -->
                 </a>
                 <a href="#"><i class="fas fa-language"></i>Language
                     <select name="language" id="">
@@ -87,7 +92,7 @@
             <div class="inner-nav " id="inner_nav">
 
             </div>
-            <div class="video1" id="right">
+            <div class="video1 " id="right">
 
 
             </div>
